--- a/.travis.yml
+++ b/.travis.yml
@@ -4,10 +4,11 @@ services: docker
 
 cache:
   directories:
-    - $HOME/.cache
+    - $HOME/.cache/Tectonic
 
 script:
   # We use the docker image from https://hub.docker.com/r/dxjoke/tectonic-docker/
   - docker pull dxjoke/tectonic-docker
   # Compiling only main.tex:
   - docker run --mount src=$TRAVIS_BUILD_DIR/,target=/usr/src/tex,type=bind dxjoke/tectonic-docker /bin/sh -c "tectonic MastodonManual.tex"
+  - ls -r *
