--- a/.travis.yml
+++ b/.travis.yml
@@ -2,6 +2,10 @@ sudo: required
 language: generic
 services: docker
 
+branches:
+  only:
+  - master
+
 cache:
   directories:
     - $HOME/.cache/Tectonic
