In Travvis, clean the repo before pushing the pdf.

--- a/.travis.yml
+++ b/.travis.yml
@@ -21,6 +21,7 @@ script:
   - docker run --mount src=$TRAVIS_BUILD_DIR/,target=/usr/src/tex,type=bind dxjoke/tectonic-docker /bin/sh -c "tectonic MastodonManual.tex"
   - ls -r 
   - git checkout --orphan $TRAVIS_BRANCH-pdf
+  - git rm -rf .
   - git add -f MastodonManual.pdf
   - git -c user.name='travis' -c user.email='travis' commit -m "Building the manual."
   - git push -q -f https://$GITHUB_USER:$GITHUB_API_KEY@github.com/$TRAVIS_REPO_SLUG $TRAVIS_BRANCH-pdf
